--- a/EstateManagementUI.BlazorServer/Components/Pages/Estate/Index.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Estate/Index.razor
@@ -1,4 +1,6 @@
 @page "/estate"
+@using EstateManagementUI.BlazorServer.Factories
+@using EstateManagementUI.BusinessLogic.Requests
 @rendermode InteractiveServer
 @inject IMediator Mediator
 
@@ -282,7 +284,7 @@
             var estateResult = await Mediator.Send(new Queries.GetEstateQuery(correlationId, accessToken, estateId));
             if (estateResult.IsSuccess)
             {
-                estate = estateResult.Data;
+                estate = ModelFactory.ConvertFrom(estateResult.Data);
                 // Load assigned operators from estate model
                 if (estate.Operators != null)
                 {
@@ -299,19 +301,19 @@
             var merchantsResult = await Mediator.Send(new Queries.GetMerchantsQuery(correlationId, accessToken, estateId));
             if (merchantsResult.IsSuccess)
             {
-                merchants = merchantsResult.Data;
+                merchants = ModelFactory.ConvertFrom(merchantsResult.Data);
             }
 
             var operatorsResult = await Mediator.Send(new Queries.GetOperatorsQuery(correlationId, accessToken, estateId));
             if (operatorsResult.IsSuccess)
             {
-                availableOperators = operatorsResult.Data;
+                availableOperators = ModelFactory.ConvertFrom(operatorsResult.Data);
             }
 
             var contractsResult = await Mediator.Send(new Queries.GetContractsQuery(correlationId, accessToken, estateId));
             if (contractsResult.IsSuccess)
             {
-                contracts = contractsResult.Data;
+                contracts = ModelFactory.ConvertFrom(contractsResult.Data);
             }
         }
         finally
