--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/MerchantSettlementHistory.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/MerchantSettlementHistory.razor
@@ -1,9 +1,9 @@
 @page "/reporting/merchant-settlement-history"
+@using EstateManagementUI.BlazorServer.Factories
+@using EstateManagementUI.BusinessLogic.Requests
 @rendermode InteractiveServer
 @inject IMediator Mediator
 @inject NavigationManager NavigationManager
-@using EstateManagementUI.BlazorServer.Models
-@using EstateManagementUI.BlazorServer.Requests
 
 <PageTitle>Merchant Settlement History</PageTitle>
 
@@ -226,7 +226,7 @@
             var result = await Mediator.Send(query);
             if (result.IsSuccess)
             {
-                merchants = result.Data;
+                merchants = ModelFactory.ConvertFrom(result.Data);
             }
         }
         catch (Exception ex)
@@ -257,7 +257,7 @@
             var result = await Mediator.Send(query);
             if (result.IsSuccess)
             {
-                settlements = result.Data;
+                settlements = ModelFactory.ConvertFrom(result.Data);
             }
             else
             {
