--- a/EstateManagementUI.BlazorServer/Components/Pages/Contracts/Edit.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Contracts/Edit.razor
@@ -1,7 +1,9 @@
 @page "/contracts/{ContractId:guid}/edit"
 @rendermode InteractiveServer
 @using System.ComponentModel.DataAnnotations
+@using EstateManagementUI.BlazorServer.Factories
 @using EstateManagementUI.BlazorServer.Permissions
+@using EstateManagementUI.BusinessLogic.Requests
 @inject IMediator Mediator
 @inject NavigationManager NavigationManager
 @inject IPermissionService PermissionService
@@ -430,7 +432,7 @@ else
             
             if (result.IsSuccess && result.Data != null)
             {
-                contractModel = result.Data;
+                contractModel = ModelFactory.ConvertFrom(result.Data);
                 
                 // Initialize model with current values
                 model = new EditContractModel
