--- a/EstateManagementUI.BlazorServer/Components/Pages/Contracts/New.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Contracts/New.razor
@@ -1,7 +1,9 @@
 @page "/contracts/new"
 @rendermode InteractiveServer
 @using System.ComponentModel.DataAnnotations
+@using EstateManagementUI.BlazorServer.Factories
 @using EstateManagementUI.BlazorServer.Permissions
+@using EstateManagementUI.BusinessLogic.Requests
 @inject IMediator Mediator
 @inject NavigationManager NavigationManager
 @inject IPermissionService PermissionService
@@ -136,7 +138,7 @@ else
             var result = await Mediator.Send(new Queries.GetOperatorsQuery(CorrelationIdHelper.New(), "stubbed-token", Guid.Parse("11111111-1111-1111-1111-111111111111")));
             if (result.IsSuccess)
             {
-                operators = result.Data;
+                operators = ModelFactory.ConvertFrom(result.Data);
             }
         }
         finally
