--- a/EstateManagementUI.BlazorServer/Components/Pages/Merchants/Deposit.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Merchants/Deposit.razor
@@ -2,6 +2,7 @@
 @rendermode InteractiveServer
 @using System.ComponentModel.DataAnnotations
 @using EstateManagementUI.BlazorServer.Permissions
+@using EstateManagementUI.BusinessLogic.Requests
 @inject IMediator Mediator
 @inject NavigationManager NavigationManager
 @inject IPermissionService PermissionService
