--- a/EstateManagementUI.BlazorServer/Components/Pages/Operators/Edit.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Operators/Edit.razor
@@ -1,7 +1,9 @@
 @page "/operators/{OperatorId:guid}/edit"
 @rendermode InteractiveServer
 @using System.ComponentModel.DataAnnotations
+@using EstateManagementUI.BlazorServer.Factories
 @using EstateManagementUI.BlazorServer.Permissions
+@using EstateManagementUI.BusinessLogic.Requests
 @inject IMediator Mediator
 @inject NavigationManager NavigationManager
 @inject IPermissionService PermissionService
@@ -164,7 +166,7 @@ else
             
             if (result.IsSuccess && result.Data != null)
             {
-                operatorModel = result.Data;
+                operatorModel = ModelFactory.ConvertFrom(result.Data);
                 
                 // Initialize model with current values
                 model = new EditOperatorModel
