--- a/EstateManagementUI.BlazorServer/Components/Pages/Operators/Index.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Operators/Index.razor
@@ -1,6 +1,8 @@
 @page "/operators"
+@using EstateManagementUI.BlazorServer.Factories
 @rendermode InteractiveServer
 @using EstateManagementUI.BlazorServer.Permissions
+@using EstateManagementUI.BusinessLogic.Requests
 @inject IMediator Mediator
 @inject NavigationManager NavigationManager
 @inject IPermissionKeyProvider PermissionKeyProvider
@@ -111,7 +113,7 @@
 
 @code {
     private bool isLoading = true;
-    private List<OperatorModel>? operators;
+    private List<OperatorModel> operators;
 
     protected override async Task OnInitializedAsync()
     {
@@ -124,7 +126,7 @@
             var result = await Mediator.Send(new Queries.GetOperatorsQuery(correlationId, accessToken, estateId));
             if (result.IsSuccess)
             {
-                operators = result.Data;
+                operators = ModelFactory.ConvertFrom(result.Data);
             }
         }
         finally
