--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/ProductPerformance.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/ProductPerformance.razor
@@ -1,10 +1,7 @@
 @page "/reporting/product-performance"
+@using EstateManagementUI.BlazorServer.Factories
+@using EstateManagementUI.BusinessLogic.Requests
 @rendermode InteractiveServer
-@using MediatR
-@using Microsoft.AspNetCore.Components.Forms
-@using EstateManagementUI.BlazorServer.Requests
-@using EstateManagementUI.BlazorServer.Models
-@using static EstateManagementUI.BlazorServer.Requests.Queries
 @inject IMediator Mediator
 @inject NavigationManager Navigation
 @inject ILogger<ProductPerformance> Logger
@@ -302,7 +299,7 @@
             var startDate = _startDate.ToDateTime(TimeOnly.MinValue);
             var endDate = _endDate.ToDateTime(TimeOnly.MaxValue);
             
-            var result = await Mediator.Send(new GetProductPerformanceQuery(
+            var result = await Mediator.Send(new Queries.GetProductPerformanceQuery(
                 correlationId, 
                 accessToken, 
                 estateId, 
@@ -312,7 +309,7 @@
             
             if (result.IsSuccess && result.Data != null)
             {
-                performanceData = result.Data;
+                performanceData = ModelFactory.ConvertFrom(result.Data);
                 CalculateKPIs();
             }
             else
