--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/SettlementSummary.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/SettlementSummary.razor
@@ -1,10 +1,7 @@
 @page "/reporting/settlement-summary"
+@using EstateManagementUI.BlazorServer.Factories
+@using EstateManagementUI.BusinessLogic.Requests
 @rendermode InteractiveServer
-@using MediatR
-@using Microsoft.AspNetCore.Components.Forms
-@using EstateManagementUI.BlazorServer.Requests
-@using EstateManagementUI.BlazorServer.Models
-@using static EstateManagementUI.BlazorServer.Requests.Queries
 @inject IMediator Mediator
 @inject NavigationManager Navigation
 @inject ILogger<SettlementSummary> Logger
@@ -273,10 +270,10 @@
             var accessToken = "stubbed-token";
             
             // Load filter options
-            var merchantsResult = await Mediator.Send(new GetMerchantsQuery(correlationId, accessToken, estateId));
+            var merchantsResult = await Mediator.Send(new Queries.GetMerchantsQuery(correlationId, accessToken, estateId));
             
             if (merchantsResult.IsSuccess)
-                merchants = merchantsResult.Data;
+                merchants = ModelFactory.ConvertFrom(merchantsResult.Data);
             
             // Load summary data
             await LoadSummaryData();
@@ -307,7 +304,7 @@
             Guid? merchantId = string.IsNullOrEmpty(_selectedMerchantId) ? null : Guid.Parse(_selectedMerchantId);
             string? status = string.IsNullOrEmpty(_selectedStatus) ? null : _selectedStatus;
             
-            var result = await Mediator.Send(new GetSettlementSummaryQuery(
+            var result = await Mediator.Send(new Queries.GetSettlementSummaryQuery(
                 correlationId, 
                 accessToken, 
                 estateId, 
@@ -319,7 +316,7 @@
             
             if (result.IsSuccess && result.Data != null)
             {
-                summaryData = result.Data;
+                summaryData = ModelFactory.ConvertFrom(result.Data);
                 CalculateKPIs();
             }
             else
