fix broken unit tests

--- a/EstateManagementUI.BlazorServer/Components/Pages/Merchants/New.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Merchants/New.razor
@@ -191,7 +191,7 @@ else
 </div>
 
 @code {
-    private New.CreateMerchantModel model = new();
+    private readonly New.CreateMerchantModel model = new();
     private bool isSaving = false;
     private bool hasPermission = false;
     private string? errorMessage;
