--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/SettlementSummary.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/SettlementSummary.razor
@@ -267,10 +267,9 @@
             
             var correlationId = new CorrelationId(Guid.NewGuid());
             var estateId = Guid.Parse("11111111-1111-1111-1111-111111111111");
-            var accessToken = "stubbed-token";
             
             // Load filter options
-            var merchantsResult = await Mediator.Send(new Queries.GetMerchantsQuery(correlationId, accessToken, estateId));
+            var merchantsResult = await Mediator.Send(new Queries.GetMerchantsQuery(correlationId, estateId));
             
             if (merchantsResult.IsSuccess)
                 merchants = ModelFactory.ConvertFrom(merchantsResult.Data);
