--- a/EstateManagementUI.BlazorServer/Components/Pages/Estate/Index.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Estate/Index.razor
@@ -1,7 +1,10 @@
 @page "/estate"
+@using EstateManagementUI.BlazorServer.Common
 @using EstateManagementUI.BlazorServer.Factories
 @using EstateManagementUI.BusinessLogic.Requests
 @rendermode InteractiveServer
+@inject AuthenticationStateProvider AuthenticationStateProvider
+@inject NavigationManager NavigationManager
 @inject IMediator Mediator
 
 <PageTitle>Estate Management</PageTitle>
@@ -24,10 +27,10 @@
         <div class="bg-white rounded-lg shadow-md">
             <div class="border-b border-gray-200">
                 <nav class="-mb-px flex space-x-8 px-6" aria-label="Tabs">
-                    <button type="button" @onclick='() => SetActiveTab("overview")' class="@GetTabClass("overview")">
+                    <button type="button" @onclick='() => SetActiveTab("overview")' class="@Helpers.GetTabClass(activeTab, "overview")">
                         Overview
                     </button>
-                    <button type="button" @onclick='() => SetActiveTab("operators")' class="@GetTabClass("operators")">
+                    <button type="button" @onclick='() => SetActiveTab("operators")' class="@Helpers.GetTabClass(activeTab, "operators")">
                         Operators
                     </button>
                 </nav>
@@ -276,12 +279,15 @@
     {
         try
         {
-            // Use stubbed mediator to get data
-            var correlationId = new CorrelationId(Guid.NewGuid());
-            var estateId = Guid.Parse("11111111-1111-1111-1111-111111111111");
-            var accessToken = "stubbed-token";
+            AuthenticationState authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+            CorrelationId correlationId = new CorrelationId(Guid.NewGuid());
+            var estateIdResult = authState.GetEstateIdFromClaims();
+            if (estateIdResult.IsFailed) {
+                this.NavigationManager.NavigateToErrorPage();
+                return;
+            }
 
-            var estateResult = await Mediator.Send(new Queries.GetEstateQuery(correlationId, accessToken, estateId));
+            var estateResult = await Mediator.Send(new Queries.GetEstateQuery(correlationId, estateIdResult.Data));
             if (estateResult.IsSuccess)
             {
                 estate = ModelFactory.ConvertFrom(estateResult.Data);
@@ -298,19 +304,20 @@
                 }
             }
 
-            var merchantsResult = await Mediator.Send(new Queries.GetMerchantsQuery(correlationId, estateId));
+            // TODO: Make these calls concurrent...
+            var merchantsResult = await Mediator.Send(new Queries.GetMerchantsQuery(correlationId, estateIdResult.Data));
             if (merchantsResult.IsSuccess)
             {
                 merchants = ModelFactory.ConvertFrom(merchantsResult.Data);
             }
 
-            var operatorsResult = await Mediator.Send(new Queries.GetOperatorsQuery(correlationId, accessToken, estateId));
+            var operatorsResult = await Mediator.Send(new Queries.GetOperatorsQuery(correlationId, String.Empty, estateIdResult.Data));
             if (operatorsResult.IsSuccess)
             {
                 availableOperators = ModelFactory.ConvertFrom(operatorsResult.Data);
             }
 
-            var contractsResult = await Mediator.Send(new Queries.GetContractsQuery(correlationId, accessToken, estateId));
+            var contractsResult = await Mediator.Send(new Queries.GetContractsQuery(correlationId, String.Empty, estateIdResult.Data));
             if (contractsResult.IsSuccess)
             {
                 contracts = ModelFactory.ConvertFrom(contractsResult.Data);
@@ -322,12 +329,12 @@
         }
     }
 
-    private string GetTabClass(string tab)
-    {
-        return activeTab == tab
-            ? "border-blue-600 text-blue-600 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm"
-            : "border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm";
-    }
+    // private string GetTabClass(string tab)
+    // {
+    //     return activeTab == tab
+    //         ? "border-blue-600 text-blue-600 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm"
+    //         : "border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm";
+    // }
 
     private void SetActiveTab(string tab)
     {
